--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,50 @@
-# Miscellaneous
-*.class
+# Flutter/Dart
+.dart_tool/
+.packages
+.pub-cache/
+.buildlog/
+.flutter-plugins
+.flutter-plugins-dependencies
+.flutter-versions
+.pub/
+.idea/
+.vscode/
+*.iml
+
+# Build outputs
+build/
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Pods/
+ios/.symlinks/
+android/.gradle/
+android/app/build/
+android/build/
+
+# Environment variables (API keys)
+.env
+.env.*
+
+# Misc
+*.lock
 *.log
-*.pyc
+*.tmp
 *.swp
 .DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
+*.class
+*.jar
+*.keystore
+*.apk
+*.aab
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
+# Generated plugin files
+.flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-/coverage/
 
-# Symbolication related
-app.*.symbols
+# Crashlytics
+firebase_crashlytics/
+crashlytics-build.properties
 
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Others
+pubspec.lock
