--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.5+1
   http: ^1.6.0
   cached_network_image: ^3.4.1
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
